app/assets/stylesheets/custom.css.scss
/* ... */
.cd-horizontal-timeline .events-content li {
  position: absolute;
  z-index: 1;
  width: 100%;
  left: 0;
  top: 0;
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  -o-transform: translateX(-100%);
  transform: translateX(-100%);
  padding: 0 5%;
  opacity: 0;
  -webkit-animation-duration: 0.4s;
  -moz-animation-duration: 0.4s;
  animation-duration: 0.4s;
  -webkit-animation-timing-function: ease-in-out;
  -moz-animation-timing-function: ease-in-out;
  animation-timing-function: ease-in-out;
}
.cd-horizontal-timeline .events-content li.selected {
  /* visible event content */
  position: relative;
  z-index: 2;
  opacity: 1;
  -webkit-transform: translateX(0);
  -moz-transform: translateX(0);
  -ms-transform: translateX(0);
  -o-transform: translateX(0);
  transform: translateX(0);
}
.cd-horizontal-timeline .events-content li.enter-right, .cd-horizontal-timeline .events-content li.leave-right {
  -webkit-animation-name: cd-enter-right;
  -moz-animation-name: cd-enter-right;
  animation-name: cd-enter-right;
}
.cd-horizontal-timeline .events-content li.enter-left, .cd-horizontal-timeline .events-content li.leave-left {
  -webkit-animation-name: cd-enter-left;
  -moz-animation-name: cd-enter-left;
  animation-name: cd-enter-left;
}
.cd-horizontal-timeline .events-content li.leave-right, .cd-horizontal-timeline .events-content li.leave-left {
  -webkit-animation-direction: reverse;
  -moz-animation-direction: reverse;
  animation-direction: reverse;
}
.cd-horizontal-timeline .events-content li > * {
  max-width: 800px;
  margin: 0 auto;
}
.cd-horizontal-timeline .events-content h2 {
  font-weight: 300;
  font-size: 3rem;
  -webkit-font-weight: 300;
  -moz-font-weight: 300;
  -ms-font-weight: 300;
  -moz-font-family: 'Lato', sans-serif;
  font-family: 'Lato', serif;
  line-height: 1.2;
}
.cd-horizontal-timeline .events-content em {
  color: #b54363;
  display: block;
  font-style: italic;
  margin: 10px auto;
}
.cd-horizontal-timeline .events-content em::before {
  content: '- ';
}
.cd-horizontal-timeline .events-content p {
  font-family: 'Lato', sans-serif;
  font-weight: 320;
  font-size: 1rem;
  color: #7e7b7b;
}
.cd-horizontal-timeline .events-content em, .cd-horizontal-timeline .events-content p {
  line-height: 1.6;
}

.content-link {
	color: #7e7b7b;
	font-weight: 500;
}

.content-link:hover {
	text-decoration: underline;
}

.letters {
	font-size: 0.8rem;
	color: #000000 !important;
}

/* Home Page Mobile Style */
.mobile {
	display: none;
	position: relative;
    width:100%;
    height:100vh;
    top: 0;
    left:0;
	background: linear-gradient(253deg, #0cc898, #1797d2, #864fe1);
    background-size: 300% 300%;
    -webkit-animation: Background 25s ease infinite;
    -moz-animation: Background 25s ease infinite;
    animation: Background 25s ease infinite;
}

.mobile-container {
  width: 90%;
  position: relative;
  top: 40vh;
  left:50%;
  margin-right: -50%;
  transform: translate(-50%, -50%);
  color: #fff;
  
   h2 {
      font-family: 'Lato', serif;
      font-size: 3.5vmax;
      font-weight: 300;
      letter-spacing: 1px;
      line-height: 3rem;
   }
   
   .chinese {
   		font-family: "KaiTi", "楷体", STKaiti, "华文楷体", serif;   
   }
   
   a {
	   text-decoration: underline;
	   color: #fff;
   }
}

.mobile-social {
  position: relative;
  top: 10vh;
  display: flex;
  justify-content: center;
  align-items: center;
}

ul.mobile-social li {
  width: 50px;
  display: inline-block;
}

ul.mobile-social a {
  width: 20%;
  width: 100px;
  color: #fff;
  font-size: 30px;
  text-decoration: none;
}

#arrow-down {
  position: absolute;
  bottom: 0;
  left: 50%;
  margin-right: -50%;
  transform: translate(-50%, -50%);
  
  img {
	  width: 35px;
	  height: 35px;
  }
}

.floating{
    -webkit-animation-name: Floatingx;
    -webkit-animation-duration: 2.5s;
    -webkit-animation-iteration-count: infinite;
    -webkit-animation-timing-function: ease-in-out;
    -moz-animation-name: Floating;
    -moz-animation-duration: 2.5s;
    -moz-animation-iteration-count: infinite;
    -moz-animation-timing-function: ease-in-out;
}

.mobile-cells {
	height: 100%;
}

.mobile-cell-container {
	position: relative;
	width: 100%;
	height: 220px;
	display: inline-block;
	color: #fff;
	
	img {
		float: left;
		margin-top: 35px;
		margin-left: 50px;
	}
	
	h4 {
		font-family: 'Lato', sans-serif;
		font-size: 28px;
		font-weight: 300;
		margin-top: 100px;
		margin-left: 200px;
	}
}

.mobile-cells li:nth-child(1) {
	background: #fff;
	height: 80px;
	
	p {
		color: #3c3c3c;
		font-family: 'Source Sans Pro', sans-serif;
		text-transform: uppercase;
		font-size: 1rem;
		font-weight: bolder;
		margin-top: 30px;
		margin-left: 20px;
	}
}

.mobile-cells li:nth-child(2) {
	background: #DCF1F9;
	
	img {
		margin-top: 80px;
		margin-left: 75px;
	}
}

.mobile-cells li:nth-child(3) {
	background: #B9E3F3;
}

.mobile-cells li:nth-child(4) {
	background: #96D5ED;
	
	img {
		margin-top: 50px;
		margin-left: 60px;
	}
}

.mobile-cells li:nth-child(5) {
	background: #73C7E7;
	
	img {
		margin-top: 70px;
		margin-left: 75px;
	}
}

.mobile-cells li:nth-child(6) {
	background: #51B8E1;
	
	img {
		margin-top: 60px;
	}
}

@-webkit-keyframes Floatingx{
    from {-webkit-transform:translate(0, 0px);}
    50% {-webkit-transform:translate(0, 10px);}
    to {-webkit-transform: translate(0, -0px);    }    
}
    
@-moz-keyframes Floating{
    from {-moz-transform:translate(0, 0px);}
    50% {-moz-transform:translate(0, 10px);}
    to {-moz-transform: translate(0, -0px);}    
}

/* About page toggle search */
.list-switcher {
  font-family: 'Lato', sans-serif;
  font-weight: 400;
  font-size: 0.95rem;
  width: 100%;
  max-width: 550px;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  letter-spacing: 1px;
  text-transform: uppercase;
}

label {
  display: block;
  margin-bottom: 1em;
  letter-spacing: 1px;
}
/* ... */

